--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>RAILGUN Privacy Pools</title>
+    <title>RAILGUN Private Proofs of Innocence</title>
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -35,35 +35,41 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <meta property="og:title" content="RAILGUN Privacy Pools" />
+    <meta property="og:title" content="RAILGUN Private Proofs of Innocence" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="RAILGUN Privacy Pools" />
+    <meta property="og:title" content="RAILGUN Private Proofs of Innocence" />
 
     <meta
       name="description"
-      content="RAILGUN Privacy Pools node status dashboard."
+      content="RAILGUN Private Proofs of Innocence node status dashboard."
     />
     <meta
       property="og:description"
-      content="RAILGUN Privacy Pools node status dashboard."
+      content="RAILGUN Private Proofs of Innocence node status dashboard."
     />
-    <meta property="og:site_name" content="RAILGUN Privacy Pools" />
+    <meta
+      property="og:site_name"
+      content="RAILGUN Private Proofs of Innocence"
+    />
 
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:description"
-      content="RAILGUN Privacy Pools node status dashboard."
+      content="RAILGUN Private Proofs of Innocence node status dashboard."
     />
-    <meta name="twitter:title" content="RAILGUN Privacy Pools" />
+    <meta name="twitter:title" content="RAILGUN Private Proofs of Innocence" />
     <meta
       name="twitter:description"
-      content="RAILGUN Privacy Pools node status dashboard."
+      content="RAILGUN Private Proofs of Innocence node status dashboard."
     />
 
     <meta name="robots" content="noodp" />
-    <meta name="keywords" content="ppoi, privacy pools, dashboard, railgun" />
+    <meta
+      name="keywords"
+      content="ppoi, privacy pools, dashboard, railgun, proof of innocence"
+    />
   </head>
   <body>
     <div id="root"></div>
